# stage-recon-unet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: base.yaml
configs/data/: brats.yaml  custom_dataset.yaml  isic.yaml  synthetic.yaml
configs/data_source/: local.yaml  webdataset_http.yaml  webdataset_local.yaml  webdataset_s3.yaml
configs/downstream/: finetune_full.yaml  freeze_encoder.yaml  linear_probe.yaml
configs/experiments/: ablation_skip_stage2.yaml  end_to_end_pretrain.yaml  random_init_baseline.yaml  smoke_test.yaml  staged_pretrain.yaml
configs/model/: attention_unet.yaml  residual_unet.yaml  unet.yaml  unet_3d.yaml
configs/pretrain/: stage1_encoder_bottleneck.yaml  stage2_bottleneck_decoder.yaml  stage3_full_reconstruction.yaml
scripts/: _bootstrap.py  create_webdataset_shards.py  evaluate.py  pretrain_pipeline.py  pretrain_stage1.py  pretrain_stage2.py  pretrain_stage3.py  run_ablation.py  run_experiment.py  train_segmentation.py
src/stagerecon/: __init__.py
src/stagerecon/data/: __init__.py  dataloader_factory.py  sample_types.py
tests/: conftest.py  test_smoke_pipeline.py
tests/test_data/: test_corruptions.py  test_shard_url_builder.py  test_synthetic_dataset.py  test_webdataset_decoding.py  test_webdataset_streaming.py
tests/test_metrics/: test_hd95.py  test_segmentation_metrics.py
tests/test_models/: test_model_shapes.py  test_modular_unet.py
tests/test_training/: test_checkpoint_transfer.py  test_parameter_controller.py  test_stage_forward.py
(+87 files in other folders)
