[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stagerecon"
version = "0.1.0"
description = "Staged self-supervised reconstruction pretraining for modular U-Net medical image segmentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "StageRecon Contributors" }]
keywords = [
  "medical-imaging",
  "segmentation",
  "self-supervised",
  "unet",
  "pytorch",
]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "scipy>=1.10",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "webdataset>=0.2.86",
  "Pillow>=9.0",
  "tqdm>=4.65",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]
ssim = [
  "pytorch-msssim>=1.0.0",
]
nifti = [
  "nibabel>=5.0",
]
dicom = [
  "pydicom>=2.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stagerecon = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
  "slow: longer-running integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008", "B905"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false
pretty = true
files = ["src/stagerecon"]
